# quant2

./: .gitignore  CLAUDE.md  README.md  notebook.py  notebook_styles.css  pyproject.toml  requirements.txt  run.bash
.claude/: bootstrap.md  codereview.md  process.md  settings.local.json  style_guide.md
.claude/commands/: checkpoint.md  start.md
.claude/memory/: MEMORY.md  feedback_run_tests.md
.claude/templates/: bootstrap.md  codereview.md  feature-template.md  literate.md  process.md  settings.json  settings.local.json
.devcontainer/: devcontainer.json
.pi/: settings.json
01-literate/: 00-qubit.md  01-gates.md  02-two_qubit.md  03-two_qubit_entangled.md  04-single_qubit_anim.md  05-qubit_grid.md  06-runner.md  07-registry.md  08-chapter_renderer.md  09-two_qubit_grid.md  10-two_qubit_bar.md  11-grover_anim.md  12-grover_start.md  13-grover_oracle.md  14-zero_qubit_grid.md  X01-book.md  X02-viz_wrappers.md  chapter01-qbits.md
02-doc/: current.md  notes.md  spec.md
03-features/: template.md
04-tasks/: template.md
05-issues/: template.md
archive/: dialog.md
chapters/: book.md  chapter01.md
content/: book_dialog.md
src/: book.py  chapter01-qbits.py  chapter01.py  chapter02.py  chapter_renderer.py  proto_streamlit.py
src/viz/: bloch.py  (+20 more)
tests/: test_chapter_renderer.py  test_entangled_grid.py  test_gates_cnot.py  test_gates_new.py  test_grover_anim.py  test_qubit.py  test_qubit_grid.py  test_registry.py  test_runners_new.py  test_sim.py  test_two_qubit.py  test_two_qubit_entangled.py  test_two_qubit_grid.py  test_viz.py  test_zero_qubit_grid.py
(+62 files in other folders)
