[project]
name = "quant2"
version = "0.1.0"
description = "Quantum computing simulator and educator"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.9",
    "numpy>=2.4.6",
    "rich>=15.0.0",
    "streamlit>=1.58.0",
    "watchdog>=6.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/quant2"]

[dependency-groups]
dev = [
    "hatchling>=1.30.1",
    "pytest>=9.0.3",
]
